--- a/gradle.properties
+++ b/gradle.properties
@@ -183,6 +183,9 @@ jaxbVersion=2.3.0
 
 jaxrpcVersion=1.1
 
+# jfreechart brings this in as a transitive dependency; targetedms declares this as a direct dependency
+jcommonVersion=1.0.23
+
 jfreechartVersion=1.0.19
 
 jmockVersion=2.6.0
@@ -246,6 +249,9 @@ springBootTomcatVersion=9.0.41
 springVersion=4.3.20.RELEASE
 
 sqliteJdbcVersion=3.7.2
+
+# NLP and SAML bring stax2-api in as a transitive dependency but with very different versions.  We force the later version.
+stax2ApiVersion=4.2.1
 
 thumbnailatorVersion=0.4.8
 
