--- a/gradle.properties
+++ b/gradle.properties
@@ -192,6 +192,9 @@ jmockVersion=2.6.0
 
 jodaTimeVersion=2.8.1
 
+# brought in transitively from guava and other google packages.  Need to resolve consistently
+jsr305Version=3.0.2
+
 jsonSimpleVersion=1.1.1
 
 jtdsVersion=1.3.1
