--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -18,7 +18,7 @@ databaseVersion=2008
 #jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
 jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
-jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};user=${jdbcUser};password=${jdbcPassword};trustServerCertificate=true
+jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true
 jdbcUser=sa
 jdbcPassword=sa
 
