--- a/server/configs/sqlserver.properties
+++ b/server/configs/sqlserver.properties
@@ -15,8 +15,8 @@ databaseDefaultPort=1433
 databaseType=mssql
 databaseVersion=2008
 
-jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true;applicationName=LabKey Server;${jdbcURLParameters}
+jdbcDriverClassName=net.sourceforge.jtds.jdbc.Driver
+jdbcURL=jdbc:jtds:sqlserver://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
 jdbcUser=sa
 jdbcPassword=labkeysa
 
