Don't encrypt db connection at all

--- a/server/configs/mssql.properties
+++ b/server/configs/mssql.properties
@@ -17,7 +17,7 @@ databaseType=mssql
 databaseVersion=2008
 
 jdbcDriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true;applicationName=LabKey Server;sslProtocol=TLSv1.2;${jdbcURLParameters}
+jdbcURL=jdbc:sqlserver://${jdbcHost}:${jdbcPort};databaseName=${jdbcDatabase};trustServerCertificate=true;applicationName=LabKey Server;encrypt=false;${jdbcURLParameters}
 jdbcUser=sa
 jdbcPassword=sa
 
