--- a/gradle.properties
+++ b/gradle.properties
@@ -214,6 +214,9 @@ mysqlDriverVersion=8.0.29
 
 mssqlJdbcVersion=10.2.1.jre17
 
+# forced compatibility between docker and UserReg-WS
+nettyVersion=4.1.48.Final
+
 objenesisVersion=1.0
 
 # increase from 2.0 for remoteclientapi/java
