--- a/settings.gradle
+++ b/settings.gradle
@@ -33,6 +33,7 @@ pluginManagement {
 
 buildscript {
     repositories {
+//        mavenCentral()
         maven {
             url "${artifactory_contextUrl}/plugins-release"
         }
