--- a/build.gradle
+++ b/build.gradle
@@ -113,11 +113,24 @@ allprojects {
                 if (project.hasProperty("artifactory_contextUrl"))
                 {
                     maven {
-                        url "${artifactory_contextUrl}/ext-tools-local"
+                        // using individual repos from Artifactory because the pentaho (and gradle-plugins) repositories incorrectly respond with a 200 status code
+                        // even when resources are not available.
+                        url "${artifactory_contextUrl}/libs-release-local"
+
+                        if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
+                        {
+                            credentials {
+                                username = artifactory_user
+                                password = artifactory_password
+                            }
+                            authentication {
+                                basic(BasicAuthentication) // enable preemptive authentication to get around https://www.jfrog.com/jira/browse/RTFACT-4434
+                            }
+                        }
                     }
                     maven {
 
-                        url "${artifactory_contextUrl}/libs-release"
+                        url "${artifactory_contextUrl}/ext-release-local"
 
                         if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
                         {
@@ -144,6 +157,9 @@ allprojects {
                             }
                         }
                     }
+                    maven {
+                        url "${artifactory_contextUrl}/ext-tools-local"
+                    }
 // Temporarily uncomment the block below and update the four-digit number to allow building with Tomcat versions that
 // haven't been released yet. The "VOTE" emails sent to the Tomcat dev email list include a staging repo URL. In
 // addition to updating the url to match, you'll also need to update apacheTomcatVersion in gradle.properties.
@@ -151,7 +167,46 @@ allprojects {
 //                    	url "https://repository.apache.org/content/repositories/orgapachetomcat-1322/"
 //                    }
                 }
+                // this is located after our local repos because we need to pick up our version of radeox instead of the one found in mavenCentral
+                // (should probably have published our mods with a differen version)
                 mavenCentral()
+                if (project.hasProperty("artifactory_contextUrl"))
+                {
+                    maven {
+
+                        url "${artifactory_contextUrl}/sencha"
+
+                        if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
+                        {
+                            credentials {
+                                username = artifactory_user
+                                password = artifactory_password
+                            }
+                            authentication {
+                                basic(BasicAuthentication) // enable preemptive authentication to get around https://www.jfrog.com/jira/browse/RTFACT-4434
+                            }
+                        }
+                    }
+                }
+                // This repository should always be last because it currently incorrectly returns a 200 status when requesting artifacts it does not have
+                if (project.hasProperty("artifactory_contextUrl"))
+                {
+                    maven {
+
+                        url "${artifactory_contextUrl}/pentaho"
+
+                        if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
+                        {
+                            credentials {
+                                username = artifactory_user
+                                password = artifactory_password
+                            }
+                            authentication {
+                                basic(BasicAuthentication) // enable preemptive authentication to get around https://www.jfrog.com/jira/browse/RTFACT-4434
+                            }
+                        }
+                    }
+                }
             }
     configurations.all
             {
