--- a/server/embedded/build.gradle
+++ b/server/embedded/build.gradle
@@ -8,6 +8,9 @@ plugins {
     id "io.spring.dependency-management" version "1.0.8.RELEASE"
 }
 
+// 'dependency-management' plugin doesn't allow us to use 'resolutionStrategy.force' to lock versions
+ext['log4j2.version'] = log4j2Version
+
 sourceSets {
     main {
         java {
