Upgrade to Spring 5.3.22

--- a/gradle.properties
+++ b/gradle.properties
@@ -258,7 +258,7 @@ springBootTomcatVersion=9.0.65
 
 # N.B. Spring version 5+ brings in a change to form handling such that GET and POST parameters are both used when
 # posting a form. For some of our forms this causes heartache.
-springVersion=4.3.20.RELEASE
+springVersion=5.3.22
 
 sqliteJdbcVersion=3.7.2
 
