Exclude jakarta.activation from each jaxb-impl dependency declaration so MailHelper continues to build

--- a/gradle.properties
+++ b/gradle.properties
@@ -179,7 +179,7 @@ javassistVersion=3.20.0-GA
 
 javaMailVersion=1.6.7
 
-# No longer part of Java 10. Dependency for NIHS and OpenEMPI.
+# No longer part of Java 10. Dependency for many modules.
 jaxbVersion=2.3.3
 
 jaxrpcVersion=1.1
