Revert accidental edit

--- a/server/configs/pg.properties
+++ b/server/configs/pg.properties
@@ -13,8 +13,8 @@ databaseDefaultPort=5432
 
 jdbcDriverClassName=org.postgresql.Driver
 jdbcURL=jdbc:postgresql://${jdbcHost}:${jdbcPort}/${jdbcDatabase}${jdbcURLParameters}
-jdbcUser=labkey
-jdbcPassword=labkey
+jdbcUser=postgres
+jdbcPassword=sasa
 
 # key for the encrypted property store and other potentially sensitive content
 encryptionKey=defaultKey
