--- a/gradle.properties
+++ b/gradle.properties
@@ -179,8 +179,8 @@ javassistVersion=3.20.0-GA
 
 javaMailVersion=1.6.7
 
-# No longer part of Java 10. Dependency for NIHS and OpenEMPI.
-jaxbVersion=2.3.0
+# No longer part of Java 10. Dependency for many modules.
+jaxbVersion=2.3.3
 
 jaxrpcVersion=1.1
 
