--- a/gradle.properties
+++ b/gradle.properties
@@ -89,7 +89,7 @@ activationVersion=1.2.2
 
 annotationsVersion=15.0
 
-apacheTomcatVersion=9.0.56
+apacheTomcatVersion=9.0.65
 
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=1.0.3
@@ -139,11 +139,13 @@ flyingsaucerVersion=R8
 # Apache FOP -- linked to Apache Batik version above
 fopVersion=2.7
 
-googleApiServicesCalendarVersion=v3-rev255-1.23.0
-googleApiClientVersion=1.23.0
-googleHttpClientVersion=1.23.0
-googleOauthClientVersion=1.23.0
-googleProtocolBufVersion=3.12.2
+googleApiServicesCalendarVersion=v3-rev411-1.25.0
+googleApiClientVersion=1.35.2
+# Version pulled in by Google API Client 1.35.2 - force for consistency
+googleHttpClientGsonVersion=1.42.0
+googleHttpClientVersion=1.42.2
+googleOauthClientVersion=1.34.1
+googleProtocolBufVersion=3.21.5
 
 graalVersion=20.0.0
 
@@ -243,7 +245,7 @@ rforgeVersion=0.6-8
 # sync with Tika version
 romeVersion=1.18.0
 
-# this version is required for Tomcat 9 support
+# Tomcat 9 implements 4.x
 servletApiVersion=4.0.1
 
 # this version is forced for compatibility with pipeline and tika
