--- a/gradle.properties
+++ b/gradle.properties
@@ -140,9 +140,9 @@ flyingsaucerVersion=R8
 fopVersion=2.7
 
 googleApiServicesCalendarVersion=v3-rev411-1.25.0
-googleApiClientVersion=1.35.2
-# Version pulled in by Google API Client 1.35.2 - force for consistency
-googleHttpClientGsonVersion=1.42.0
+googleApiClientVersion=2.0.0
+# Force lastest for consistency
+googleHttpClientGsonVersion=1.42.2
 googleHttpClientVersion=1.42.2
 googleOauthClientVersion=1.34.1
 googleProtocolBufVersion=3.21.5
