--- a/gradle.properties
+++ b/gradle.properties
@@ -130,6 +130,8 @@ commonsNetVersion=3.8.0
 commonsPoolVersion=1.6
 commonsValidatorVersion=1.7
 
+datadogVersion=0.108.1
+
 dom4jVersion=1.6.1
 
 ehcacheCoreVersion=2.6.8
@@ -210,6 +212,8 @@ kaptchaVersion=2.3
 
 log4j2Version=2.17.2
 
+lombokVersion=1.18.24
+
 mysqlDriverVersion=8.0.29
 
 mssqlJdbcVersion=10.2.1.jre17
@@ -221,6 +225,8 @@ objenesisVersion=1.0
 
 # increase from 2.0 for remoteclientapi/java
 opencsvVersion=2.3
+
+openTracingVersion=0.33.0
 
 oracleJdbcVersion=21.5.0.0
 
@@ -290,6 +296,3 @@ xmlApisVersion=1.0.b2
 
 # sync with Tika/POI
 xmlbeansVersion=5.0.3
-
-# lombok
-lombokVersion=1.18.24
