--- a/gradle.properties
+++ b/gradle.properties
@@ -167,6 +167,9 @@ hamcrestVersion=1.3
 # It is also necessary to update SequenceAnalysisManager.htsjdkVersion
 htsjdkVersion=2.24.1
 
+httpclient5Version=5.1.3
+httpcore5Version=5.1.4
+
 httpclientVersion=4.5.13
 httpcoreVersion=4.4.14
 httpmimeVersion=4.5.13
