Typo in comment

--- a/gradle.properties
+++ b/gradle.properties
@@ -141,7 +141,7 @@ fopVersion=2.7
 
 googleApiServicesCalendarVersion=v3-rev411-1.25.0
 googleApiClientVersion=2.0.0
-# Force lastest for consistency
+# Force latest for consistency
 googleHttpClientGsonVersion=1.42.2
 googleHttpClientVersion=1.42.2
 googleOauthClientVersion=1.34.1
