--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,7 @@ buildFromSource=true
 # The default version for LabKey artifacts that are built or that we depend on.
 # override in an individual module's gradle.properties file as necessary 
 labkeyVersion=22.10-SNAPSHOT
-labkeyClientApiVersion=2.0.0
+labkeyClientApiVersion=3.0.0
 # Version numbers for the various binary artifacts that are included when
 # deploying via deployApp or deployDist and when creating distributions.
 windowsUtilsVersion=1.0
@@ -143,7 +143,7 @@ fopVersion=2.7
 
 googleApiServicesCalendarVersion=v3-rev411-1.25.0
 googleApiClientVersion=2.0.0
-# Force lastest for consistency
+# Force latest for consistency
 googleHttpClientGsonVersion=1.42.2
 googleHttpClientVersion=1.42.2
 googleOauthClientVersion=1.34.1
@@ -168,6 +168,9 @@ hamcrestVersion=1.3
 # Note: if changing this, we might need to match with the picard version in the SequenceAnalysis module build.gradle
 # It is also necessary to update SequenceAnalysisManager.htsjdkVersion
 htsjdkVersion=2.24.1
+
+httpclient5Version=5.1.3
+httpcore5Version=5.1.4
 
 httpclientVersion=4.5.13
 httpcoreVersion=4.4.14
