--- a/gradle.properties
+++ b/gradle.properties
@@ -46,7 +46,8 @@ buildFromSource=true
 # The default version for LabKey artifacts that are built or that we depend on.
 # override in an individual module's gradle.properties file as necessary 
 labkeyVersion=22.11-SNAPSHOT
-labkeyClientApiVersion=3.1.0
+labkeyClientApiVersion=4.0.0-SNAPSHOT
+
 # Version numbers for the various binary artifacts that are included when
 # deploying via deployApp or deployDist and when creating distributions.
 windowsUtilsVersion=1.0
@@ -204,7 +205,7 @@ jsr305Version=3.0.2
 
 jsonSimpleVersion=1.1.1
 
-orgJsonVersion=20220320
+orgJsonVersion=20220924
 
 jtdsVersion=1.3.1
 
