--- a/gradle.properties
+++ b/gradle.properties
@@ -90,8 +90,6 @@ activationVersion=1.2.2
 
 annotationsVersion=15.0
 
-apacheTomcatVersion=9.0.65
-
 #Unifying version used by DISCVR and Premium
 apacheDirectoryVersion=1.0.3
 #Transitive dependency of Apache directory: 2.0.18 contains some regressions
@@ -203,8 +201,6 @@ jodaTimeVersion=2.8.1
 # brought in transitively from guava and other google packages. Need to resolve consistently
 jsr305Version=3.0.2
 
-jsonSimpleVersion=1.1.1
-
 orgJsonVersion=20220924
 
 jtdsVersion=1.3.1
@@ -264,9 +260,11 @@ slf4jLog4j12Version=1.7.33
 # this version is forced for compatibility with api, LDK, and workflow
 slf4jLog4jApiVersion=1.7.33
 
-springBootVersion=2.7.3
+springBootVersion=2.7.5
 # This MUST match the Tomcat version dictated by springBootVersion
-springBootTomcatVersion=9.0.65
+springBootTomcatVersion=9.0.68
+# Usually kept in sync with spring boot Tomcat version above
+apacheTomcatVersion=9.0.68
 
 springVersion=5.3.22
 
