--- a/gradle.properties
+++ b/gradle.properties
@@ -101,8 +101,8 @@ apacheMinaVersion=2.0.19
 # tika
 asmVersion=9.2
 
-# Apache Batik -- Batik version is dictated by Apache FOP, but we need to pull in batik-codec separately
-batikVersion=1.14
+# Apache Batik -- Batik version needs to be compatible with Apache FOP, but we need to pull in batik-codec separately
+batikVersion=1.16
 
 # sync with Tika version
 bouncycastleVersion=1.70
@@ -139,7 +139,7 @@ ehcacheCoreVersion=2.6.8
 flyingsaucerVersion=R8
 
 # Apache FOP -- linked to Apache Batik version above
-fopVersion=2.6
+fopVersion=2.7
 
 googleApiServicesCalendarVersion=v3-rev255-1.23.0
 googleApiClientVersion=1.23.0
