--- a/gradle.properties
+++ b/gradle.properties
@@ -106,8 +106,9 @@ asmVersion=9.4
 # Apache Batik -- Batik version needs to be compatible with Apache FOP, but we need to pull in batik-codec separately
 batikVersion=1.16
 
-# sync with Tika version
-bouncycastleVersion=1.70
+# sync with Tika version (or later)
+bouncycastlePgpVersion=1.72.1
+bouncycastleVersion=1.72
 
 cglibNodepVersion=2.2.3
 
